--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     background: var(--bg-url) no-repeat top center/cover;
 }
 
+
 #container {
     width: 100%;
     height: 712px;
@@ -199,4 +200,14 @@ footer {
 
 footer a:hover {
     color: rgb(153, 0, 255);
+}
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
 }
